# data-gcp

./: .dbt-checkpoint.yaml  .env  .env.template  .gitignore  .gitleaks.toml  .pre-commit-ci-dbt-config.yaml  .pre-commit-config.yaml  .pyproject.toml  .sqlfluff  .sqlfluffignore  404.html  =  Makefile  README.md  backend_imported_tables.txt  cloudbuild.yaml  dependabot.yml  docker-compose.yml  git status  hooks.py  index.html  linter-requirements.txt  llms-full.txt  llms.txt  mkdocs.yml  ml_feat_item_embedding_cost_optimization.md  pyproject.toml  requirements.in  requirements.txt  run_tests.sh  set_env.py  sitemap.xml
jobs/etl_jobs/: Dockerfile.py310  Dockerfile.py311  Dockerfile.py312  Dockerfile.py313  Dockerfile.py314  PACKAGE_ARCHITECTURE_PROPOSAL.md  README.md  memory_mode_analysis.md  pyproject.toml
jobs/etl_jobs/_template/: requirements.in  requirements.txt
jobs/etl_jobs/connectors/: brevo.py  instagram.py  pyproject.toml
jobs/etl_jobs/factories/: brevo.py  pyproject.toml  titelive.py
jobs/etl_jobs/http_custom/: clients.py  rate_limiters.py
jobs/etl_jobs/http_tools/: __init__.py  auth.py  circuit_breakers.py  clients.py  exceptions.py  pyproject.toml  rate_limiters.py  requirements.txt  retry_strategies.py
jobs/etl_jobs/utils/: pyproject.toml  schemas.py  secrets.py
jobs/ml_jobs/algo_training/: README.md  deploy_model.py  evaluate.py  pyproject.toml  requirements.in  requirements.txt  requirements_macos.txt
jobs/ml_jobs/artist_linkage/: .gitignore  README.md  REAMDE.md  artist_linkage_config.json  cluster.py  cluster_deprecated.py  constants.py  evaluate.py  extract_from_wikidata.py  get_wikimedia_commons_license.py  get_wikipedia_page_content.py  link_new_products.py  link_new_products_to_artists.py  link_products_to_artists_from_scratch.py  main.py  match_artists_on_wikidata.py  preprocess.py  pyproject.toml  refresh_artist_metadatas.py  requirements.in  requirements.txt  utils.py
jobs/ml_jobs/clusterisation/: README.md  clusterisation.py  preprocess.py  preprocess_second.py  pyproject.toml  requirements.in  requirements.txt
jobs/ml_jobs/edito_semantic_search/: .env  .env.template  .gitignore  Dockerfile  Makefile  README.md  build_and_push_docker_image.py  build_lancedb_index.py  build_lancedb_table.py  constants.py  deploy_model.py  deploy_to_docker_registery.sh  inspect_lancedb_scalar_table.py  main.py  notes.py  parquet_partioning.py  parquet_partioning_updated.py  prepare_catalog_data.py  pyproject.toml  read_lancedb_export_to_bq.py
jobs/ml_jobs/embeddings/: dimension_reduction.py  main.py  preprocess.py  pyproject.toml  requirements.in  requirements.txt
jobs/ml_jobs/endpoint_monitoring/: Makefile  README.md  constants.py  main.py  pyproject.toml  recommendation_integration_test_stg_20250725T120000_integration_tests_reports.parquet  recommendation_integration_test_stg_20250725T120000_integration_tests_reports.parquet:Zone.Identifier  run_recommendation_monitoring_tests.py
jobs/ml_jobs/event_linkage/: .gitignore  Makefile  README.md  main.py  pyproject.toml  task.md
jobs/ml_jobs/finance/: .gitignore  Makefile  README.md  main.py  main_prophet.py  pyproject.toml
jobs/ml_jobs/graph_recommendation/: .gitignore  Makefile  README.md  main.py  pyproject.toml  test.pt
jobs/ml_jobs/item_embedding/: .gitignore  Makefile  README.md  config.py  constants.py  database.py  embed_items.py  embedding.py  gcp_secrets.py  gcs_utils.py  main.py  pyproject.toml  setup_encoders.py  storage.py  utils.py
jobs/ml_jobs/item_linkage/: README.md  assign_linked_ids.py  build_semantic_space.py  (+11 more)
jobs/poc-dlthub/: .gitignore  const.py  main.py  pyproject.toml
orchestration/: .dockerignore  .env.default  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  import_subcategories_model.py  orchestration-requirements.txt  pyproject.toml  wait_for_dag_deployed.sh
orchestration/.claude/: settings.local.json
orchestration/airflow/: .gitignore  Dockerfile  Dockerfile.netskope  README.md  orchestration-composer-requirements.txt  orchestration-requirements.in  orchestration-requirements.txt
orchestration/dags/: .airflowignore  .rsyncignore  Offer_name_tags.py  airflow_cleaning.py  airflow_monitoring.py  airflow_monitorng_v2.py  algo_training.py  algo_training_v1.py  algo_training_v2_deep_reco.py  algo_training_v2_mf_reco.py  archive_database.py  create_backend_tables.py  dbt-requirements.in  dbt-requirements.txt  diversification_kpi.py  diversification_kpi_v1.py  dump_prod_from_scalingo.py  dump_scalingo.py  dump_scalingo_matomo_history.py  dump_scalingo_matomo_refresh.py  export_ab_testing_tables.py  export_cloudsql_tables_to_bigquery.py  extract_offer_tags.py  extract_top_commons_tags.py  extracted_data_tag_offers.py  import_adage.py  import_addresses.py  import_analytics.py  import_analytics_incremental.py  import_api_referentials.py  import_applicative_database.py  import_contentful_home.py  import_diversification.py  import_dms_subscriptions.py  import_firebase_data.py  import_matomo_history.py  import_matomo_refresh.py  import_metabase.py  import_offer_bookability_log.py  import_siren.py  (+11 more)
orchestration/k8-airflow/: Dockerfile.k8-worker  k8-worker-requirements.txt
orchestration/k8s-airflow/: Dockerfile copy.k8s-worker  Dockerfile.k8s-worker  README.md  k8s-worker-requirements.in  k8s-worker-requirements.txt
orchestration/plugins/: __init__.py  dbt_docs.py  dbt_lineage.py
orchestration/scripts/: HOW-TO-TEST-DAGS-FROM-LOCAL-MACHINE.md  create_test_dag.py  push_to_staging.sh
orchestration/tests/: conftest.py  dags_test.py  import_analytics_test.py  import_table_test.py  import_tables_test.py  test_delayed_waiting_operator.py  test_queries.py
poc_lancedb/: README.md  app.py  chatbot_test_dataset_enriched.parquet  compare_rag_vs_labellised_app.py  compare_rag_vs_labellised_bkp.py  constants.py  export_table.py  import_data.py  llm_tools.py  main_app.py  poc_chatbot_lancedb.py  pyproject.toml  tag_descriptions.py  tools.py  vector_database.py
poc_lancedb/sql/: offer_embeddings.sql  offer_tags.sql  offer_tags_enriched.sql
(+5196 files in other folders)
