[project]
name = "airflow-development"
version = "0.1.1"
description = "Simple Custom GCP Airflow development environment with docker-compose"
requires-python = ">=3.10"
dependencies = [
  # base packages for airflow
  "apache-airflow[google,gcp]==2.9.3",
  "apache-airflow-providers-ssh>=4.0.1",
  "apache-airflow-providers-celery==3.6.2",
  "apache-airflow-providers-postgres==5.10.2",
  # extras packages for dbt
  "dbt-core==1.8.6",
  "dbt-bigquery==1.8.1",
  "elementary-data[bigquery]==0.18.1",
  # SSO requirements
  "flask-openid==1.3.1",
  "flask-oidc==2.2.2",
]

[tool.uv]
dev-dependencies = [
  "pytest==7.4.4",
  "pytest-cov==5.0.0",
  "mock==4.0.2",
  "sqlfluff==3.1.1",
  "sqlfluff-templater-dbt==3.1.1",
  "dbt-metabase==1.4.2",
  "dbt-score==0.7.1",
  "dbt-coverage==0.3.8",
  "psycopg2-binary==2.9.9",
]

## ruff
[tool.ruff]
target-version = 'py38'

lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
