[project]
name = "airflow-development"
version = "0.1.1"
description = "Simple Custom GCP Airflow development environment with docker-compose"
requires-python = ">=3.12,<3.13"

[dependency-groups]
airflow = [
  "apache-airflow[gcp,google]==3.0.1",
  "apache-airflow-providers-ssh==4.0.1",
  #"elementary-data[bigquery]==1.18.2",
]
dbt = [
  #"dbt-core==1.8.0",
  #"dbt-metabase==1.4.2",
]
sso = [
  "flask-openid>=1.3.1",
  "flask-oidc>=2.2.2",
]
dev = [
  "pytest>=7.4.4",
  "pytest-cov>=5.0.0",
  "mock>=4.0.2",
  "sqlfluff>=3.1.1",
  #"sqlfluff-templater-dbt>=3.1.1",
]

[tool.uv]
default-groups = ["airflow", "dbt", 'dev']


## ruff
[tool.ruff]
target-version = 'py38'

lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
