[project]
name = "poc-dlthub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[duckdb,parquet]>=1.21.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-bigquery-storage>=2.36.1",
    "loguru>=0.7.3",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by ruff formatter)
    "E203", # whitespace before ':' (conflicts with ruff formatting)
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = ["teleinfo"]

[tool.ruff.format]
# Use Black-compatible formatting style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
