[project]
name = "algo-training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datetime>=4.3",
    "fastparquet>=2024.11.0",
    "gcsfs>=2023.5.0",
    "google-cloud-aiplatform>=1.22.0",
    "google-cloud-secret-manager>=2.23.1",
    "keras>=2.15",
    "loguru>=0.6.0",
    "matplotlib>=3.8.4",
    "mlflow>=2.20.1",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pandas-gbq>=0.23.1",
    "polars>=0.18.6",
    "protobuf>=3.9.2",
    "pyarrow>=10.0.1",
    "pytest>=6.2.5",
    "recommenders>=1.2.1",
    "scann>=1.3.0",
    "setuptools>=78.1.1",
    "tensorflow-recommenders>=0.7.3",
    "tensorflow[and-cuda]>=2.15.1",
    "tornado>=6.4.2",
    "tqdm>=4.64.1",
    "typer>=0.7.0",
    "h11>=0.16.0"
]
## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
