[project]
name = "algo-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.1.0,<2.2.0",
    "gcsfs>=2026.2.0",
    "google-cloud-aiplatform>=1.141.0",
    "google-cloud-iam>=2.21.0",
    "keras>=3.13.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.2.0",
    "pandas>=2.3.3",
    "pandas-gbq>=0.34.0",
    "polars>=1.39.2",
    "protobuf>=3.9.2",
    "pyarrow>=23.0.1",
    "recommenders>=1.2.1",
    "tensorflow-recommenders>=0.7.7",
    "tensorflow[and-cuda]>=2.21.0 ; sys_platform == 'linux'",
    "tf-keras>=2.21.0",
    "tqdm>=4.67.3",
    "typer>=0.12.3",
]

## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
