[project]
name = "algo-training"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datetime>=4.3",
    "fastparquet>=2024.11.0",
    "gcsfs>=2023.5.0",
    "google-cloud-aiplatform>=1.22.0",
    "google-cloud-iam>=2.22.0",
    "h11>=0.16.0",
    "keras>=3.13.1",
    "loguru>=0.6.0",
    "matplotlib>=3.8.4",
    "mlflow>=3.10.1",
    "numpy>=1.26.4",
    "pandas-gbq>=0.23.1",
    "pandas>=2.2.0",
    "polars>=0.18.6",
    "protobuf>=3.9.2",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "recommenders>=1.2.1",
    "scann>=1.3.0",
    "setuptools>=78.1.1",
    "tensorflow-recommenders>=0.7.3",
    "tensorflow[and-cuda]>=2.16.0",
    "tf-keras>=2.18.0",
    "tornado>=6.4.2",
    "tqdm>=4.64.1",
    "typer>=0.7.0",
]
## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
[tool.uv]
environments = [
    # "sys_platform == 'darwin'", # Readd this once we know how to handle ScannNN dependency on macOS
    "sys_platform == 'linux'",
]
constraint-dependencies = [
    "mlflow >= 3.12.0", # CVE-2026-0545
    "aiohttp >= 3.14.0", # GHSA-jg22-mg44-37j8, GHSA-hg6j-4rv6-33pg
    "GitPython >= 3.1.50", # GHSA-rpm5-65cw-6hj4, GHSA-x2qx-6953-8485, GHSA-v87r-6q3f-2j67, GHSA-mv93-w799-cj2w
    "idna >= 3.15", # GHSA-65pc-fj4g-8rjx
    "jupyter-server >= 2.20.0", # GHSA-qh7q-6qm3-653w, GHSA-24qx-w28j-9m6p, GHSA-5789-5fc7-67v3, GHSA-5mrq-x3x5-8v8f, PYSEC-2026-67, PYSEC-2026-69, PYSEC-2026-68, CVE-2026-44727
    "jupyterlab >= 4.5.7", # GHSA-37w4-hwhx-4rc4, GHSA-mqcg-5x36-vfcg, PYSEC-2026-164
    "Mako >= 1.3.12", # GHSA-2h4p-vjrc-8xpq
    "mistune >= 3.2.1", # PYSEC-2026-168, GHSA-8mp2-v27r-99xp, GHSA-8g87-j6q8-g93x, GHSA-58cw-g322-p94v, GHSA-v87v-83h2-53w7
    "notebook >= 7.5.6", # GHSA-rch3-82jr-f9w9
    "python-dotenv >= 1.2.2", # GHSA-mf9w-mj56-hr94
    "starlette >= 1.0.1", # PYSEC-2026-161, GHSA-86qp-5c8j-p5mr
    # "transformers >= 5.0.0rc3", # PYSEC-2025-217, GHSA-69w3-r845-3855 (blocked by recommenders < 5)
    "urllib3 >= 2.7.0", # GHSA-qccp-gfcp-xxvc, GHSA-mf9v-mfxr-j63j, PYSEC-2026-142, PYSEC-2026-141
]
