[project]
name = "artist-linkage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout>=4.0.3",
    "gcsfs>=2024.9.0.post1",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.16.0",
    "ipykernel>=6.29.4",
    "jellyfish>=1.0.3",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "mlflow>=3.8.1",
    "mwparserfromhell>=0.7.2",
    "pandas[parquet,performance]>=2.2.3",
    "pydantic-ai>=1.56.0",
    "pytest>=8.2.1",
    "rapidfuzz>=3.9.1",
    "ruff>=0.4.5",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=5.2.1",
    "setuptools>=78.1.1",
    "stqdm>=0.0.5",
    "streamlit>=1.35.0",
    "tornado>=6.5",
    "typer>=0.12.3",
    "unidecode>=1.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py310'

# lint.select = ["E4", "E7", "E9", "F", "I"]
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "FBT001", # flake8-boolean-trap
 ]
lint.ignore = [
    "W505", # doc line too long (handled by pydocstyle)
    "E501", # line too long (handled by pycodestyle)
]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
