[project]
name = "edito-semantic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-cloud-aiplatform>=1.144.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=2.18.0",
    "huggingface-hub>=0.34.4",
    "lancedb>=0.25.3",
    "loguru>=0.7.0",
    "pandas>=2.2.0",
    "polars>=0.19.4",
    "pyarrow>=16.1.0",
    "pydantic-ai>=1.56.0",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.1.0",
    "tabulate>=0.9.0",
    "torch>=2.0.0",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "streamlit>=1.35.0",
    "ruff>=0.14.8",
    "pytest>=9.0.3",
    "ipykernel>=7.1.0",
]

## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py312'

lint.select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "FBT001", # flake8-boolean-trap
]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

# ------------------------------------------------------------------
# NEW SECTIONS ADDED BELOW FOR CPU-ONLY TORCH
# ------------------------------------------------------------------

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
