[project]
name = "edito-semantic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-cloud-aiplatform>=1.144.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=2.18.0",
    "huggingface-hub>=0.34.4",
    "lancedb>=0.25.3",
    "loguru>=0.7.0",
    "pandas>=2.2.0",
    "polars>=0.19.4",
    "pyarrow>=23.0.1",
    "pydantic-ai>=1.99.0",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.1.0",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "streamlit>=1.35.0",
    "ruff>=0.14.8",
    "pytest>=9.0.3",
    "ipykernel>=7.1.0",
]


## uv

[tool.uv]
constraint-dependencies = [
    "aiohttp >= 3.14.0", # CVE-2026-34993, CVE-2026-47265, GHSA-hg6j-4rv6-33pg, GHSA-jg22-mg44-37j8
    "authlib >= 1.6.12", # CVE-2026-41425, CVE-2026-41479, CVE-2026-44681, GHSA-jj8c-mmj3-mmgv, GHSA-r95x-qfjj-fjj2, GHSA-w8p2-r796-3vmq
    "cryptography >= 46.0.7", # CVE-2026-39892, GHSA-p423-j2cm-9vmq
    "gitpython >= 3.1.50", # CVE-2026-42215, CVE-2026-42284, CVE-2026-44243, CVE-2026-44244, GHSA-7545-fcxq-7j24, GHSA-mv93-w799-cj2w, GHSA-rpm5-65cw-6hj4, GHSA-v87r-6q3f-2j67, GHSA-x2qx-6953-8485
    "idna >= 3.15", # CVE-2026-45409, GHSA-65pc-fj4g-8rjx
    "pydantic-ai-slim >= 1.99.0", # CVE-2026-46678, GHSA-cqp8-fcvh-x7r3
    "pyjwt >= 2.13.0", # CVE-2026-48522, CVE-2026-48524, CVE-2026-48525, CVE-2026-48526, GHSA-993g-76c3-p5m4, GHSA-fhv5-28vv-h8m8, GHSA-w7vc-732c-9m39, GHSA-xgmm-8j9v-c9wx
    "python-dotenv >= 1.2.2", # CVE-2026-28684, GHSA-mf9w-mj56-hr94
    "python-multipart >= 0.0.27", # CVE-2026-40347, CVE-2026-42561, GHSA-mj87-hwqh-73pj, GHSA-pp6c-gr5w-3c5g
    "starlette >= 1.0.1", # CVE-2026-48710, GHSA-86qp-5c8j-p5mr
    "transformers >= 5.0.0rc3", # CVE-2025-14929, CVE-2026-1839, GHSA-69w3-r845-3855
    "urllib3 >= 2.7.0", # CVE-2026-44431, CVE-2026-44432, GHSA-mf9v-mfxr-j63j, GHSA-qccp-gfcp-xxvc
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }




## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py311'

lint.select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "FBT001", # flake8-boolean-trap
]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
