[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout==4.0.3",
    "datetime>=5.5",
    "gcsfs>=2023.5.0",
    "huggingface-hub==0.15.1",
    "loguru==0.6.0",
    "numpy<2.0.0",
    "pandas==2.0.3",
    "pandas-gbq==0.23.1",
    "pillow>=10.4.0",
    "polars==0.19.12",
    "protobuf>=3.9.2",
    "psutil>=6.0.0",
    "pytest==6.1.1",
    "requests==2.31.0",
    "sentence-transformers==2.3",
    "setuptools==78.1.1",
    "torch==2.6.0",
    "tqdm>=4.66.4",
    "typer==0.7.0",
]
